2008-09-22  Chris Fleizach  <cfleizach@apple.com>

        Reviewed by Darin Adler.

        Tests for <rdar://problem/6230234> AXTable should probably not be exposed in there's only one cell

        * accessibility/table-one-cell-expected.txt: Added.
        * accessibility/table-one-cell.html: Added.

2008-09-22  Chris Fleizach  <cfleizach@apple.com>

        Reviewed by Darin Adler.

        Tests for setting/getting selected text ranges through AX

        * accessibility/textarea-selected-text-range-expected.txt: Added.
        * accessibility/textarea-selected-text-range.html: Added.

2008-09-22  David Hyatt  <hyatt@apple.com>

        Add new test for .parentStyleSheet.

        Reviewed by Sam Weinig

        * fast/css/nested-rule-parent-sheet.html: Added.
        
2008-09-21  Gabor Loki  <loki@inf.u-szeged.hu>

        Reviewed and tweaked by Darin Adler.

        - https://bugs.webkit.org/show_bug.cgi?id=19408
          Add test case for constant folding.

        * fast/js/constant-folding-expected.txt: Added.
        * fast/js/constant-folding.html: Added.
        * fast/js/resources/constant-folding.js: Added.

2008-09-21  Cameron Zwarich  <cwzwarich@uwaterloo.ca>

        Reviewed by Maciej Stachowiak.

        Tests for the 'arguments' object.

        * fast/js/arguments-expected.txt: Added.
        * fast/js/arguments.html: Added.
        * fast/js/resources/arguments.js: Added.

2008-09-19  Stephanie Lewis  <slewis@apple.com>

        Reviewed by Oliver Hunt.

        Use correct mime-type for javascript

        * svg/webarchive/svg-script-subresouces-expected.webarchive:
        * webarchive/test-duplicate-resources-expected.webarchive:
        * webarchive/test-script-src-expected.webarchive:

2008-09-19  Nikolas Zimmermann  <zimmermann@kde.org>

        Reviewed by Antti & Eric.

        Fixes: https://bugs.webkit.org/show_bug.cgi?id=20372

        Add new test fast/dom/HTMLScriptElement/script-reexecution.html, verifying that