@@ -38,13 +38,13 @@
     }
 
     var expected = [
-      ["", "box1", "webkitTransitionEnd", 0.5],
-      ["", "box2", "webkitTransitionEnd", 0.5],
-      ["", "box2", "webkitTransitionEnd", 0.5],
-      ["", "box3", "webkitTransitionEnd", 0.7],
-      ["", "box3", "webkitTransitionEnd", 0.7],
-      ["", "box3", "webkitTransitionEnd", 0.7],
-      ["", "box3", "webkitTransitionEnd", 0.7]
+      ["background-color", "box2", "webkitTransitionEnd", 0.5],
+      ["background-color", "box3", "webkitTransitionEnd", 0.7],
+      ["height", "box3", "webkitTransitionEnd", 0.7],
+      ["left", "box1", "webkitTransitionEnd", 0.5],
+      ["left", "box2", "webkitTransitionEnd", 0.5],
+      ["left", "box3", "webkitTransitionEnd", 0.7],
+      ["width", "box3", "webkitTransitionEnd", 0.7]
     ];
     
     function startTransition()
